# vosk-asterisk

./: Makefile.am  README.md  bootstrap  configure.ac
conf/: res_speech_google.conf
res-speech-google/: Makefile.am  res_speech_google.c
